force-app/main/default/objects/Job_Costing_Settings__c/Job_Costing_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Job Costing Settings</label>
</CustomObject>