force-app/main/default/objects/Job_Costing_Settings__c/fields/Dealer_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Number__c</fullName>
    <defaultValue>0.03</defaultValue>
    <label>Dealer Number</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>