force-app/main/default/objects/Job_Costing_Settings__c/fields/G_A_Allocation__c.field-meta.xml
<CustomField>
    <fullName>G_A_Allocation__c</fullName>
    <label>G&amp;A Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>