force-app/main/default/objects/Job_Costing_Settings__c/fields/Retail_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Retail_Multiplier__c</fullName>
    <defaultValue>2.0</defaultValue>
    <label>Retail Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>