force-app/main/default/objects/Job_Costing_Settings__c/fields/TM_Allocation__c.field-meta.xml
<CustomField>
    <fullName>TM_Allocation__c</fullName>
    <label>TM Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>